// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSuperSelect props compressed 1`] = `
<div
  class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-block-EuiInputPopover"
>
  <input
    type="hidden"
    value=""
  />
  <div
    class="euiFormControlLayout emotion-euiFormControlLayout-compressed"
  >
    <div
      class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
      style="--euiFormControlRightIconsCount: 1;"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        class="euiSuperSelectControl emotion-euiSuperSelect__control-compressed"
        type="button"
      />
      <div
        class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-compressed-absolute-right"
      >
        <span
          class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="euiFormControlLayoutCustomIcon__icon"
            data-euiicon-type="chevronSingleDown"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuperSelect props fullWidth 1`] = `
<div
  class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-block-EuiInputPopover"
>
  <input
    type="hidden"
    value=""
  />
  <div
    class="euiFormControlLayout emotion-euiFormControlLayout-fullWidth"
  >
    <div
      class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
      style="--euiFormControlRightIconsCount: 1;"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        class="euiSuperSelectControl emotion-euiSuperSelect__control-fullWidth"
        type="button"
      />
      <div
        class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
      >
        <span
          class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="euiFormControlLayoutCustomIcon__icon"
            data-euiicon-type="chevronSingleDown"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuperSelect props prepend and append 1`] = `
<div
  class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-block-EuiInputPopover"
>
  <input
    type="hidden"
    value=""
  />
  <div
    class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-group"
  >
    <div
      class="euiFormControlLayout__prepend emotion-euiFormControlLayout__side"
    >
      <div
        class="css-vmqubl-wrapper"
      >
        <div
          class="euiFormPrepend css-7iwqdv-side-uncompressed"
        >
          <span
            class="euiFormLabel emotion-euiFormLabel"
          >
            prepend
          </span>
        </div>
      </div>
    </div>
    <div
      class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup"
      style="--euiFormControlRightIconsCount: 1;"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        class="euiSuperSelectControl emotion-euiSuperSelect__control-inGroup"
        type="button"
      />
      <div
        class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
      >
        <span
          class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="euiFormControlLayoutCustomIcon__icon"
            data-euiicon-type="chevronSingleDown"
          />
        </span>
      </div>
    </div>
    <div
      class="euiFormControlLayout__append emotion-euiFormControlLayout__side"
    >
      <div
        class="css-vmqubl-wrapper"
      >
        <div
          class="euiFormAppend css-7iwqdv-side-uncompressed"
        >
          <span
            class="euiFormLabel emotion-euiFormLabel"
          >
            append
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuperSelect renders 1`] = `
<body>
  <div>
    <div
      class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-block-EuiInputPopover"
    >
      <input
        type="hidden"
        value=""
      />
      <div
        class="euiFormControlLayout emotion-euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
          style="--euiFormControlRightIconsCount: 1;"
        >
          <button
            aria-controls="euiPopover_generated-id_panelId"
            aria-expanded="true"
            aria-haspopup="listbox"
            aria-label="aria-label"
            class="euiSuperSelectControl testClass1 testClass2 emotion-euiSuperSelect__control-open-euiTestCss"
            data-test-subj="test subject string"
            type="button"
          />
          <div
            class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
          >
            <span
              class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="chevronSingleDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-euiportal="true"
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-live="assertive"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPopover__panel emotion-euiPanel-grow-m-plain-euiPopover__panel-light-isAttached-bottom"
        data-popover-panel="true"
        id="euiPopover_generated-id_panelId"
        role="dialog"
        style="top: 2px; left: 0px; will-change: transform, opacity; z-index: 2000; inline-size: 0px;"
      >
        <div>
          <div
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="-1"
          />
          <div
            data-focus-lock-disabled="disabled"
          >
            <p
              class="emotion-euiScreenReaderOnly"
              id="euiSuperSelect__generated-id__screenreaderDescribeId"
            >
              You are in a form selector and must select a single option. Use the Up and Down arrow keys to navigate or Escape to close.
            </p>
            <div
              aria-activedescendant="1"
              aria-describedby="euiSuperSelect__generated-id__screenreaderDescribeId"
              aria-label="Select listbox"
              class="euiSuperSelect__listbox eui-scrollBar emotion-euiSuperSelect__listbox"
              role="listbox"
              tabindex="0"
            >
              <button
                aria-selected="false"
                class="euiListItemLayout euiSuperSelect__item emotion-euiListItemLayout-isInteractive-isFocused"
                data-test-subj="euiListItemLayout"
                id="1"
                role="option"
              >
                <span
                  class="euiListItemLayout__content emotion-euiListItemLayout__content"
                >
                  <span
                    class="euiListItemLayout__icon emotion-euiListItemLayout__icon"
                    color="text"
                    data-euiicon-type="empty"
                  />
                  <span
                    class="euiListItemLayout__text emotion-euiListItemLayout__text-wrap"
                  >
                    Option #1
                  </span>
                </span>
              </button>
              <button
                aria-selected="false"
                class="euiListItemLayout euiSuperSelect__item emotion-euiListItemLayout-isInteractive"
                data-test-subj="euiListItemLayout"
                id="2"
                role="option"
              >
                <span
                  class="euiListItemLayout__content emotion-euiListItemLayout__content"
                >
                  <span
                    class="euiListItemLayout__icon emotion-euiListItemLayout__icon"
                    color="text"
                    data-euiicon-type="empty"
                  />
                  <span
                    class="euiListItemLayout__text emotion-euiListItemLayout__text-wrap"
                  >
                    Option #2
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="-1"
          />
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</body>
`;
